--- a/Protein Bars/Admin/Admin.Master
+++ b/Protein Bars/Admin/Admin.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="ProteinBar.master.cs" Inherits="Protein_Bars.ProteinBar" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Admin.master.cs" Inherits="Protein_Bars.Admin.Admin1" %>
 
 <!DOCTYPE html>
 <html>
@@ -10,8 +10,6 @@
        
     </title>
 <link href="~/css/style.css" rel="stylesheet" type="text/css">
-    <meta name="viewport" content="initial-scale=1.0">
-    <meta charset="utf-8">
     
 </head>
 
@@ -29,12 +27,12 @@
 
 
   <ul>
-  
-  <li><a href="Index.aspx">Home</a></li>
-  <li><a href="Contact.aspx">Contact</a></li>
-  <li><a href="Register.aspx">Login</a></li>
-      <asp:LoginStatus ID="LoginStatus1" runat="server" LoginText="" OnLoggingOut="LoginStatus1_LoggingOut" />
-      <asp:LoginName ID="LoginName1" runat="server" />
+
+       
+        <li><a href="Admin.aspx">Admin</a></li>
+        <li><a href="Add.aspx">Add</a></li>
+        <asp:LoginStatus ID="LoginStatus1" runat="server" LoginText="Log Out" LogoutPageUrl="~/Register.aspx" OnLoggingOut="LoginStatus1_LoggingOut" />
+        <asp:LoginName ID="LoginName1" runat="server" />
 </ul> 
     <br />
 
@@ -47,22 +45,21 @@
   
 
 </div>
+</form>
 
-     <br />
+     
     
-    <asp:ContentPlaceHolder ID="MapPlaceHolder" runat="server">
-    </asp:ContentPlaceHolder>
+    
       
 </body>
 
-   
 </html>
 
 <br />
 
- <footer style="background-color: #FFFFFF">
+<footer style="background-color: #FFFFFF">
      <asp:hyperlink runat="server" NavigateUrl="~/Admin/Admin.aspx">Admin</asp:hyperlink>
-     <p>
+    <p>
     <a href="http://jigsaw.w3.org/css-validator/check/referer">
         <img style="border:0;width:88px;height:31px"
             src="http://jigsaw.w3.org/css-validator/images/vcss"
@@ -70,8 +67,6 @@
     </a>
 </p>
             
+    
 
     </footer>
-</form>
-
-     
