--- a/Protein Bars/css/style.css
+++ b/Protein Bars/css/style.css
@@ -1,56 +1,128 @@
-﻿* {
-    border: 0;
-    padding: 0;
-    margin: 0;
+﻿a, a:visited {
+    color: black;
+    border: 2px solid black;
 }
+
+
+    a:hover {
+        color: grey;
+    }
+
 
 body {
-    background-color: black;
+    background-color: gainsboro;
 }
 
-#page {
-    width: 800px;
-    margin: auto;
-    background-color: #DDD;
-    min-height: 500px;
+
+#Column img {
+    height: 200px;
 }
 
-#menu {
-    height: 600px;
-    width: 100px;
-    float: left;
-    padding-top: 10px;
-}
 
 #content {
-    margin-left: 110px;
     padding-left: 10px;
     padding-right: 10px;
-    background-color: bisque;
 }
 
-a, a:visited {
+
+#header {
+    width: 100%;
+    height: 50px;
+    background-color: white;
+}
+
+
+/* Optional: Makes the sample page fill the window. */
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+
+li a {
+    display: block;
+    font-size: x-large;
+    font-style: italic;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+    /* Change the link color to #111 (black) on hover */
+    li a:hover {
+        background-color: black;
+    }
+
+
+li {
+    float: left;
+    width: 25%;
+}
+
+
+.Lists {
+    margin-bottom: 30px;
+}
+
+
+/* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+#map {
+    height: 45%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#menu ul li {
+    list-style-type: none;
+    padding-left: 10px;
     color: black;
 }
 
 
+table {
+    font-size: x-large;
+    font-style: italic;
+    border: 5px black solid;
+    width: 50%;
+   
+    background-color: white;
+}
 
-#menu ul li {
+
+#TableProduct {
+    width: 50px;
+    height: 50px;
+}
+
+
+td, th {
+    border: 5px solid black;
+}
+
+
+ul {
     list-style-type: none;
-    padding-left: 10px; 
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: lightgray;
+    display: block;
+    font-size: x-large;
+    font-style: italic;
+    
+    
 }
 
-a:hover {
-    color: white;
-}
 
 
 
-/*The style below will apply to the element with an
-id of "header" */
-#header {
-    width: 100%;
-    height: 100px;
-    background-color: #AAFFAA;
-}
+    
+
+
+
+
 
